REGRESSION (r272201): iPad render flashing on load https://bugs.webkit.org/show_bug.cgi?id=226216 <rdar://problem/78466306>

Reviewed by Simon Fraser.

Source/WebCore:

When we switched to wrapping all animations in animation groups for bug 219894, we neglected to update GraphicsLayerCA::moveOrCopyAnimations().
We now iterate over m_animationGroups which contain the animation groups that are current and in the order they were added, and also ensure
we preserve the original begin time for each group.

Test: webanimations/accelerated-animation-tiled-while-running.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::moveOrCopyLayerAnimation):
(WebCore::GraphicsLayerCA::moveOrCopyAnimations):
* platform/graphics/ca/GraphicsLayerCA.h:

LayoutTests:

Add a test that runs the same accelerated animation on two container elements, stack one above the other.
The bottom container has a red background while the top container has a green background, the whole body
being green. After the animation has started, we set the bottom element to have a very large size such
that its layer becomes tiled. Before this patch the bottom element would stop animation and its red
background would start appearing as the top element would keep animating. After this patch both elements
are animated and no red should appear.

* webanimations/accelerated-animation-tiled-while-running-expected.html: Added.
* webanimations/accelerated-animation-tiled-while-running.html: Added.

Canonical link: https://commits.webkit.org/238564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278566 268f45cc-cd09-0410-ab3c-d52691b4dbfc